- Fixed menu overflow problems (display a scrollbar instead).

--- a/Web Site/screen.css
+++ b/Web Site/screen.css
@@ -18,26 +18,23 @@ body {
     margin-bottom: 2em;
 }
 
-.Menu {
-    height: 1.3em;
-}
-
 .Menu ul {
     padding: 0;
     margin: 0;
-    z-index: 0;
+    
     list-style: none;
+    overflow: auto;
 }
 
 .Menu ul li {
-    float: left;
-    margin-left: 1em;
+    padding-top: 1px;
+    display: table-cell;
 }
 
 .Menu ul li a[href] {
+    border-width: 1px;
     border-style: solid solid none solid;
     border-color: #D0D0D0;
-    border-width: 1px;
     
     background-color: #FAFAFA;
     color: #676767;
@@ -45,23 +42,23 @@ body {
     font-weight: bold;
     font-size: 115%;
     text-decoration: none;
+    
+    margin-left: 0.75em;
     padding: 0 1em 0 1em;
 }
 
 .Menu ul li[class~=Selected] a,
 .Menu ul li a[href]:hover {
-    border-style: solid solid none solid;
     border-color: #89B2FF;
-    border-width: 1px;
-    
     background-color: #89B2FF;
     color: white;
 }
 
+.Menu ul li:last-child a[href] {
+    margin-right: 0.75em;
+}
+
 .Document {
-    z-index: 1;
-    position: relative;
-    
     border: #89B2FF solid 3px;
     background-color: white;
     
